@@ -50,3 +50,5 @@ Fixes/Patches incorporated from:
 	Pavel Chekin
 	Chris Clark
 	Masanori Akaishi
+	Tony Fleisher
+	Erik Hollensbe
