@@ -9,13 +9,6 @@ int	sqlrconnection::newQueryCommand() {
 	debugPrint("connection",1,"new query");
 	#endif
 
-	// find an available cursor
-	if ((currentcur=findAvailableCursor())==-1) {
-		getQueryFromClient(0,0);
-		noAvailableCursors();
-		return 1;
-	}
-
 	// handle query will return 1 for success,
 	// 0 for network error and -1 for a bad query
 	int	querystatus=handleQuery(0,0,1);
@@ -35,24 +28,4 @@ int	sqlrconnection::newQueryCommand() {
 		endSession();
 		return 0;
 	}
-}
-
-int	sqlrconnection::findAvailableCursor() {
-
-	for (int i=0; i<cfgfl->getCursors(); i++) {
-		if (!cur[i]->busy) {
-			cur[i]->busy=1;
-			#ifdef SERVER_DEBUG
-			debugPrint("connection",3,(long)currentcur);
-			debugPrint("connection",2,"found a free cursor...");
-			debugPrint("connection",2,"done getting a cursor");
-			#endif
-			return i;
-		}
-	}
-	#ifdef SERVER_DEBUG
-	debugPrint("connection",1,
-			"find available cursor failed: all cursors are busy");
-	#endif
-	return -1;
 }
